<resources>
    <string name="app_name">MediX</string>
    <string name="medix">MediX</string>
    <string name="welcomewords">Identifikasi penyakit dan pengobatan yang sesuai dengan cepat berdasarkan gejala Anda. Dapatkan saran medis segera dan tindakan yang disarankan</string>
    <string name="get_started">Mulai</string>
    <string name="hello_login">Halo,</string>
    <string name="welcome_login">Selamat datang di MediX</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="dontacc">Belum punya akun?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="hello_signup">Halo,</string>
    <string name="create_an_account">Buat sebuah akun</string>
    <string name="username">Username</string>
    <string name="have_account">Sudah memiliki akun?</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profil</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="fever">Demam</string>
    <string name="descfever">Demam adalah peningkatan suhu tubuh hingga lebih dari 38C. Kondisi ini bisa menandakan adanya penyakit atau kondisi tertentu pada tubuh.</string>
    <string name="medication">Pengobatan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome_to_medix">Selamat datang di MediX</string>
    <string name="write_your_symptoms_here">Tulis gejala Anda di sini:</string>
    <string name="analyze">Analisis</string>
    <string name="log_out">Logout</string>
    <string name="language">Bahasa</string>
    <string name="rebecca">Rebecca</string>
    <string name="emailprofile">rebecca@gmail.com</string>
    <string name="account">Account</string>
    <string name="title_article">Antibiotik adalah obat untuk mengobati atau mencegah infeksi bakteri</string>
    <string name="article">Article</string>
    <string name="description">Deskripsi</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="sign_up_noU">Sign Up</string>
    <string name="penyebab">Penyebab</string>
    <string name="_100">100%</string>
    <string name="tolong_gejala">Tolong masukkan gejala anda disini :</string>
    <string name="prediksi_penyakit">Prediksi Penyakit</string>
    <string name="tingkat_akurasi">Tingkat Akurasi</string>
    <string name="obat">Obat</string>
    <string name="rekomendasi_obat">Rekomendasi Obat</string>
    <string name="change_profile_picture">Ganti Gambar Profil</string>
    <string name="save">Simpan</string>
    <string name="message">Pesan</string>
    <string name="empty_description_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="predict">Predict</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="tulis_disini">Tulis disini...</string>
</resources>