<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_article">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.medix.ui.nav.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.medix.ui.nav.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.medix.ui.nav.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.example.medix.ui.nav.article.ArticleFragment"
        android:label="fragment_article"
        tools:layout="@layout/fragment_article" />
</navigation>