<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.MediX"
    android:paddingBottom="?attr/actionBarSize"
    android:paddingTop="?attr/actionBarSize"
    android:fillViewport="true"
    tools:context=".ui.nav.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/user"
            app:layout_constraintBottom_toTopOf="@id/ll_user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_desc"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/rebecca"
                app:layout_constraintBottom_toTopOf="@id/tv_email"
                app:layout_constraintTop_toBottomOf="@id/iv_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailprofile"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppins" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_edit"
            app:layout_constraintTop_toBottomOf="@id/ll_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
            <TextView
                android:id="@+id/tv_title_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                app:layout_constraintBottom_toTopOf="@id/btn_edit"
                app:layout_constraintTop_toBottomOf="@id/tv_title_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_shadow"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/edit_profile"
            android:textColor="@color/grey15"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/btn_bahasa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_desc" />

        <Button
            android:id="@+id/btn_bahasa"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_shadow"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/ganti_bahasa"
            android:textColor="@color/grey15"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/btn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_edit" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_shadow_red"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/log_out"
            android:textColor="@color/grey15"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_bahasa" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            tools:visibility="visible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
