<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.editprofile.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:backgroundTint="@color/darkgreen25"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            app:titleTextColor="@color/green70"
            app:title="@string/edit_profile"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"/>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/user"
        app:layout_goneMarginTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="@id/btn_edit"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_shadow"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/change_profile_picture"
            android:textColor="@color/grey15"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_desc"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <LinearLayout
            android:id="@+id/ll_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_save"
            app:layout_constraintTop_toBottomOf="@id/btn_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
            <TextView
                android:id="@+id/tv_title_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_desc_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_desc"
                app:layout_constraintBottom_toTopOf="@id/btn_save"
                app:boxCornerRadiusTopStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusBottomEnd="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <EditText
                    android:id="@+id/et_desc_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:background="@drawable/bg_et_home"
                    android:lines="4"
                    android:inputType="textMultiLine"
                    android:gravity="top" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_shadow"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/save"
            android:textColor="@color/grey15"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_desc" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            tools:visibility="visible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>